# Sysinternals-listent

./: .gitignore  Cargo.toml  DEVELOPMENT.md  INSTALL.md  README.md  build.rs  makePackages.sh
.github/: copilot-instructions.md
src/: constants.rs  daemon.rs  entitlements.rs  lib.rs  main.rs  models.rs  monitor.rs  output.rs  scan.rs
src/cli/: mod.rs
src/daemon/: config.rs  launchd.rs  logging.rs
src/entitlements/: native.rs  pattern_matcher.rs
src/monitor/: polling.rs  process_tracker.rs
src/output/: progress.rs
tests/: MANUAL_TESTS.md  functional_codesign_accuracy.rs  functional_comprehensive.rs  functional_monitor.rs  functional_static_scan.rs  integration_tests.rs  run_all_tests.sh  run_functional_tests.sh  simple_functional.rs  test_cli_help.rs  test_cli_version.rs  test_daemon_cli.rs  test_daemon_config.rs  test_daemon_integration.rs  test_daemon_logging.rs  test_json_output.rs  test_monitor_cli.rs  test_monitor_output.rs  test_pattern_matching.rs  unit_tests.rs
tests/contract/: test_cli_args_validation.rs  test_cli_help.rs  test_cli_version.rs  test_human_output_format.rs  test_json_schema.rs  test_monitor_filters.rs  test_unified_logging.rs
tests/helpers/: mod.rs  reliable_runner.rs
tests/integration/: mod.rs  test_basic_monitoring.rs  test_combined_filters.rs  test_default_scan.rs  test_entitlement_filters.rs  test_interrupt_handling.rs  test_json_output.rs  test_monitor_entitlement_filtering.rs  test_monitor_output_formats.rs  test_monitor_path_filtering.rs  test_no_matches.rs  test_path_filters.rs  test_real_process_detection.rs  (+1 more)
(+2 files in other folders)
